fix: padding for posts on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -18,6 +18,8 @@ body.full-width #maininner {
     }
 }
 
+#content { padding: 15px; }
+
 #content > h1 { margin-top: 0; }
 
 #content.width-800 {
