--- a/templates/yoo_nano2/css/layout.css
+++ b/templates/yoo_nano2/css/layout.css
@@ -8,7 +8,6 @@
 
 .module,
 #breadcrumbs,
-#content,
 #footer { margin: 20px; }
 
 #menu .module { margin: 10px 5px; }
