--- a/templates/yoo_nano2/styles/tiles/css/layout.css
+++ b/templates/yoo_nano2/styles/tiles/css/layout.css
@@ -7,8 +7,7 @@
 ----------------------------------------------------------------------------------------------------*/
 
 .module,
-#breadcrumbs,
-#content { margin: 15px; }
+#breadcrumbs { margin: 15px; }
 
 #menu .module { margin: 10px 5px; }
 
